fix: h2 is too narrow

--- a/css/styles.css
+++ b/css/styles.css
@@ -375,6 +375,11 @@ blockquote {
   line-height: 19px;
 }
 
+.md-item > :not(p),
+.file-text > :not(p) {
+  line-height: initial;
+}
+
 #preview,
 #position {
   padding: 0.75rem;
